# src/modules/admin/entities/admin.entity.ts
@@ -1,6 +1,6 @@
 import { GENDER } from '@sc-enums/gender';
 import { DB_Model } from '@sc-enums/model';
-import { ProfileImage } from '@sc-modules/profile-image/entities/profile-image.entity';
+import { Image } from '@sc-modules/image/entities/image.entity';
 import { School } from '@sc-modules/school/entities/school.entity';
 import { User } from '@sc-modules/users/entities/user.entity';
 import {
@@ -42,12 +42,12 @@ export class Admin {
   @Column({ type: String, length: 10 })
   phoneNumber: string;
 
-  @OneToOne(() => ProfileImage, (image) => image.userId, {
-    eager: true,
-    nullable: true,
-  })
+  @OneToOne(() => Image, (image) => image.userId, { nullable: true })
   @JoinColumn({ name: 'profileImageId' })
-  profileImage: ProfileImage;
+  profileImage: Image;
+
+  @Column({ nullable: true })
+  profileImageUrl: string;
 
   @OneToOne(() => User, { cascade: true, eager: true })
   @JoinColumn({ name: 'userId' })
