# src/modules/school/school.controller.ts
@@ -3,19 +3,26 @@ import {
   Get,
   Post,
   Body,
-  Patch,
   Param,
   Delete,
+  UploadedFile,
+  Patch,
 } from '@nestjs/common';
 import { SchoolService } from './school.service';
 import { CreateSchoolDto } from './dto/create-school.dto';
 import { UpdateSchoolDto } from './dto/update-school.dto';
 import { ApiTags } from '@nestjs/swagger';
+import { FileUpload } from '@sc-decorators/file-upload';
+import { UserProfile } from '@sc-decorators/user-profile';
+import { ImageService } from '@sc-modules/image/image.service';
 
 @Controller('school')
 @ApiTags('School')
 export class SchoolController {
-  constructor(private readonly schoolService: SchoolService) {}
+  constructor(
+    private readonly schoolService: SchoolService,
+    private readonly imageService: ImageService,
+  ) {}
 
   @Post()
   create(@Body() createSchoolDto: CreateSchoolDto) {
@@ -33,7 +40,25 @@ export class SchoolController {
   }
 
   @Patch(':id')
-  update(@Param('id') id: string, @Body() updateSchoolDto: UpdateSchoolDto) {
+  @FileUpload(UpdateSchoolDto, 'image')
+  async update(
+    @UploadedFile() file: Express.Multer.File,
+    @Param('id') id: string,
+    @Body() updateSchoolDto: UpdateSchoolDto,
+    @UserProfile() completeProfile: UserProfile,
+  ) {
+    if (typeof updateSchoolDto.classes == 'string')
+      updateSchoolDto['classes'] = JSON.parse(updateSchoolDto.classes);
+    if (file) {
+      const fileName = `/logo/${id}.webp`;
+      const profileImage = await this.imageService.saveImage(
+        completeProfile,
+        fileName,
+        file,
+      );
+      updateSchoolDto['logo'] = profileImage;
+      updateSchoolDto['logoUrl'] = fileName;
+    }
     return this.schoolService.updateDocument(id, updateSchoolDto);
   }
 
